# altv-fivem-translator

./: .gitmodules  CMakeLists.txt  README.md  build.bat
src/: args.cpp  args.h  macros.h  main.cpp  main.h  resource.cpp  resource.h  runtime.cpp  runtime.h
src/bindings/: bindings.h  citizen.cpp  main.cpp  player.cpp
src/events/: events.cpp  events.h  resource.cpp
